--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,15 +4,20 @@
     <dimen name="margin_48">48dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_15">15dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="margin_30">30dp</dimen>
 
     <dimen name="font_40">40sp</dimen>
     <dimen name="font_16">16sp</dimen>
     <dimen name="font_18">18sp</dimen>
     <dimen name="font_20">20sp</dimen>
     <dimen name="padding_8">8dp</dimen>
+    <dimen name="padding_20">20dp</dimen>
 
 
     <dimen name="default_button">48dp</dimen>
+    <dimen name="margin_64">64dp</dimen>
+    <dimen name="margin_50">50dp</dimen>
 
 
 </resources>
