login signup Item Adapter

--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -11,18 +11,14 @@
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_login">
 
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="nimoinfo.nify.plantify.ui.home.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/SignUpFragment"
+        android:name="nimoinfo.nify.plantify.ui.login.SignUpFragment"
+        android:label="@string/str_sign_up"
+        tools:layout="@layout/fragment_sign_up">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/LoginFragment" />
+
     </fragment>
 </navigation>
