--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="fab_margin">48dp</dimen>
     <dimen name="default_image_size_96dp">96dp</dimen>
     <dimen name="margin_48">48dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_15">15dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="margin_30">30dp</dimen>
 
     <dimen name="font_40">40sp</dimen>
     <dimen name="font_16">16sp</dimen>
     <dimen name="font_18">18sp</dimen>
     <dimen name="font_20">20sp</dimen>
     <dimen name="padding_8">8dp</dimen>
-
+    <dimen name="padding_20">20dp</dimen>
 
     <dimen name="default_button">48dp</dimen>
+    <dimen name="margin_64">64dp</dimen>
+    <dimen name="margin_50">50dp</dimen>
 
+    <dimen name="width_8">8dp</dimen>
+    <dimen name="margin_96">96dp</dimen>
+    <dimen name="margin_56">56dp</dimen>
+    <dimen name="margin_36">36dp</dimen>
+    <dimen name="margin_87">87dp</dimen>
+    <dimen name="margin_102">102dp</dimen>
+    <dimen name="margin_32">32dp</dimen>
+    <dimen name="margin_28">28dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+    <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_14">14dp</dimen>
+    <dimen name="margin_12">12dp</dimen>
+    <dimen name="margin_10">10dp</dimen>
+    <dimen name="margin_4">4dp</dimen>
+    <dimen name="margin_2">2dp</dimen>
+    <dimen name="margin_1">1dp</dimen>
+    <dimen name="padding_64">64dp</dimen>
+    <dimen name="padding_70">70dp</dimen>
+    <dimen name="padding_87">87dp</dimen>
+    <dimen name="padding_56">56dp</dimen>
+    <dimen name="padding_48">48dp</dimen>
+    <dimen name="padding_42">42dp</dimen>
+    <dimen name="padding_36">36dp</dimen>
+    <dimen name="padding_32">32dp</dimen>
+    <dimen name="padding_30">30dp</dimen>
+    <dimen name="padding_28">28dp</dimen>
+    <dimen name="padding_26">26dp</dimen>
+    <dimen name="padding_24">24dp</dimen>
+    <dimen name="padding_22">22dp</dimen>
+    <dimen name="padding_16">16dp</dimen>
+    <dimen name="padding_12">12dp</dimen>
+    <dimen name="padding_4">4dp</dimen>
+    <dimen name="padding_2">2dp</dimen>
+    <dimen name="default_big_button">44dp</dimen>
+    <dimen name="default_button_32">32dp</dimen>
+    <dimen name="default_button_medium">24dp</dimen>
+    <dimen name="default_button_20">20dp</dimen>
+    <dimen name="default_button_small">16dp</dimen>
+    <dimen name="default_button_x_small">12dp</dimen>
+    <dimen name="default_height">48dp</dimen>
+    <dimen name="default_toolbar_height">56dp</dimen>
+    <dimen name="default_edit_text_height">44dp</dimen>
+    <dimen name="spinner_default_width">180dp</dimen>
+    <dimen name="run_button_default_width">64dp</dimen>
+    <dimen name="text_timer_width">96dp</dimen>
+    <dimen name="run_button_default_height">54dp</dimen>
+    <dimen name="run_textView_size">48dp</dimen>
+    <dimen name="player_icon_in_list">64dp</dimen>
+    <dimen name="default_view_pager_image_size_212">212dp</dimen>
+    <dimen name="default_view_pager_image_size">188dp</dimen>
+    <dimen name="default_image_size">144dp</dimen>
+    <dimen name="default_image_size_medium">96dp</dimen>
+    <dimen name="default_image_size_74dp">74dp</dimen>
+    <dimen name="default_image_size_64dp">64dp</dimen>
+    <dimen name="default_image_size_54dp">54dp</dimen>
+    <dimen name="default_image_size_small">48dp</dimen>
+    <dimen name="default_image_size_32dp">32dp</dimen>
+    <dimen name="default_image_icon_medium">24dp</dimen>
+    <dimen name="default_image_icon_small">18dp</dimen>
+    <dimen name="progress_bar_height">4dp</dimen>
+    <dimen name="default_card_radius">16dp</dimen>
+    <dimen name="default_card_radius_20">20dp</dimen>
+    <dimen name="default_card_elevation">16dp</dimen>
+    <dimen name="default_button_size_medium">36dp</dimen>
+    <dimen name="button_time_slot_width">154dp</dimen>
+    <dimen name="button_time_slot_height">72dp</dimen>
+    <dimen name="default_radius_medium">8dp</dimen>
+    <dimen name="default_radius_25dp">25dp</dimen>
+    <dimen name="card_radius_14dp">14dp</dimen>
+    <dimen name="card_radius_20dp">20dp</dimen>
+    <dimen name="font_36">36sp</dimen>
+    <dimen name="font_28">28sp</dimen>
+    <dimen name="font_24">24sp</dimen>
+    <dimen name="font_14">14sp</dimen>
+    <dimen name="font_12">12sp</dimen>
+    <dimen name="font_11">11sp</dimen>
+    <dimen name="font_10">10sp</dimen>
+    <dimen name="default_cardView_height">100dp</dimen>
+    <dimen name="small_coin_size_104dp">104dp</dimen>
+    <dimen name="medium_coin_size_124dp">124dp</dimen>
+    <dimen name="big_coin_size_158dp">158dp</dimen>
+    <dimen name="image_size_small">40dp</dimen>
+    <dimen name="card_elevation_8dp">8dp</dimen>
+    <dimen name="card_elevation_4dp">4dp</dimen>
+    <dimen name="card_elevation_32dp">32dp</dimen>
+    <dimen name="animation_height_400dp">400dp</dimen>
+    <dimen name="animation_height_200dp">200dp</dimen>
+    <dimen name="animation_height_265dp">265dp</dimen>
+    <dimen name="width_300dp">300dp</dimen>
+    <dimen name="height_350p">350dp</dimen>
+    <dimen name="layout_weight_60">60</dimen>
+    <dimen name="margin_18">18dp</dimen>
+    <dimen name="margin_250">250dp</dimen>
+    <dimen name="margin_255">255dp</dimen>
+    <dimen name="margin_290">290dp</dimen>
+    <dimen name="fc_item_width">111dp</dimen>
+    <dimen name="fc_item_height">104dp</dimen>
+    <dimen name="default_shadow_height">90dp</dimen>
+    <dimen name="default_view_height">62dp</dimen>
+    <dimen name="margin_160">160dp</dimen>
+    <dimen name="margin_6">6dp</dimen>
+    <dimen name="margin_92">92dp</dimen>
+    <dimen name="icon_direction_size_28">28dp</dimen>
+    <dimen name="padding_10">10dp</dimen>
+    <dimen name="padding_6">6dp</dimen>
 
 </resources>
