--- a/app/src/main/res/layout/itemlayout.xml
+++ b/app/src/main/res/layout/itemlayout.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_app_logo"
+            android:src="@drawable/plantify"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
