--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -77,14 +77,16 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/margin_250"
         android:layout_height="@dimen/default_button"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+        android:layout_marginVertical="@dimen/margin_50"
         android:background="@color/darkgreen"
         android:text="@string/str_login"
         android:textColor="@color/white"
         android:textSize="@dimen/margin_20"
-        android:layout_marginVertical="@dimen/margin_50"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/do_not_have_account"
