--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -97,20 +97,22 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonSignUp"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/margin_250"
             android:layout_height="@dimen/default_button"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+            android:layout_marginVertical="@dimen/margin_50"
             android:background="@color/darkgreen"
             android:text="@string/str_sign_up"
             android:textColor="@color/white"
             android:textSize="@dimen/margin_20"
-            android:layout_marginVertical="@dimen/margin_50"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/do_not_have_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
+            android:layout_marginTop="77dp"
             android:text="@string/str_do_you_have_account"
             android:textColor="@color/black"
             android:textAlignment="center"
@@ -123,7 +125,7 @@
             android:id="@+id/Signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_87"
+            android:layout_marginTop="@dimen/padding_77"
             android:layout_marginEnd="@dimen/margin_96"
             android:text="@string/str_login"
             android:textColor="@color/black"
